# Spoken

./: .gitignore  README.md
_mydocs/: 000_mymy.md  001_review_and_expand.md  002_rules.md
docs/: 000_cpp17-reference.md  001_the_project_sketch.md  002_spoken_design_and_spec.md  003_spoken_design_and_spec.md  004_review_v1.md  005_spoken_spec_rating.md  006_spoken_review_rerating.md  007_spoken_master_design_and_spec.md  008_spoken_corrected_impl.md  009_spoken_source_documentation.md
scripts/: check-doc-rules.ps1
spoken/: CMakeLists.txt
spoken/apps/: spoken.cpp
spoken/docsument/: license.md  readme.md
spoken/include/spoken/: conversion_pipeline.hpp  error.hpp  number_converter.hpp  sentence_builder.hpp  symbol_converter.hpp  tokenizer.hpp  tokens.hpp  version.hpp
spoken/include/spoken/tts/: factory.hpp  null_engine.hpp  tts_engine.hpp
spoken/src/: conversion_pipeline.cpp  number_converter.cpp  sentence_builder.cpp  symbol_converter.cpp  tokenizer.cpp  tokens.cpp
spoken/src/tts/: factory.cpp  null_engine.cpp
spoken/tests/: CMakeLists.txt  test_framework.hpp  test_main.cpp  test_number_converter.cpp  test_pipeline_e2e.cpp  test_sentence_builder.cpp  test_symbol_converter.cpp  test_tokenizer.cpp
